After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 551543 - Nautilus crashes if desktop_is_home_dir is changed while browsing homedir
Nautilus crashes if desktop_is_home_dir is changed while browsing homedir
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
2.91.x
Other Linux
: Normal critical
: 3.0
Assigned To: Rohini
Nautilus Maintainers
: 583688 646025 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2008-09-09 17:23 UTC by Diego Escalante Urrelo (not reading bugmail)
Modified: 2011-03-29 20:44 UTC
See Also:
GNOME target: ---
GNOME version: 2.91/3.0


Attachments
patch to fix this bug (588 bytes, patch)
2009-04-20 09:21 UTC, Rohini
none Details | Review
pathbar: keep a ref to the GFile while updating the path (1.17 KB, patch)
2011-03-29 19:55 UTC, Cosimo Cecchi
committed Details | Review

Description Diego Escalante Urrelo (not reading bugmail) 2008-09-09 17:23:56 UTC
Using 2.23.92 in ubuntu ibex:

(gdb) r
Starting program: /usr/bin/nautilus 
[Thread debugging using libthread_db enabled]
[New Thread 0xb6a0c700 (LWP 15659)]
seahorse nautilus module initialized
Initializing nautilus-share extension
[New Thread 0xb626fb90 (LWP 15666)]

** (nautilus:15659): WARNING **: Unable to add monitor: Not supported
[New Thread 0xb528bb90 (LWP 15668)]
[New Thread 0xb4a8ab90 (LWP 15669)]
Nautilus-Share-Message: Called "net usershare info" but it failed: 'net usershare' returned error 255: net usershare: cannot open usershare directory /var/lib/samba/usershares. Error No such file or directory
Please ask your system administrator to enable user sharing.

[Thread 0xb4a8ab90 (LWP 15669) exited]
[Thread 0xb626fb90 (LWP 15666) exited]
[New Thread 0xb626fb90 (LWP 15672)]

(nautilus:15659): GLib-GObject-CRITICAL **: g_object_ref: assertion `G_IS_OBJECT (object)' failed

Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0xb6a0c700 (LWP 15659)]
0xb75ff246 in IA__g_type_check_is_value_type (type=140232960)
    at /build/buildd/glib2.0-2.18.0/gobject/gtype.c:3834
3834	/build/buildd/glib2.0-2.18.0/gobject/gtype.c: No such file or directory.
	in /build/buildd/glib2.0-2.18.0/gobject/gtype.c
(gdb) thread apply all bt

Thread 1 (Thread 0xb6a0c700 (LWP 15659))

  • #0 IA__g_type_check_is_value_type
    at /build/buildd/glib2.0-2.18.0/gobject/gtype.c line 3834
  • #1 IA__g_value_type_compatible
    at /build/buildd/glib2.0-2.18.0/gobject/gvalue.c line 501
  • #2 g_value_object_collect_value
    at /build/buildd/glib2.0-2.18.0/gobject/gobject.c line 2707
  • #3 IA__g_signal_emit_valist
    at /build/buildd/glib2.0-2.18.0/gobject/gsignal.c line 2952
  • #4 IA__g_signal_emit
    at /build/buildd/glib2.0-2.18.0/gobject/gsignal.c line 3034
  • #5 nautilus_path_bar_update_path
    at nautilus-pathbar.c line 1780
  • #6 preferences_callback_entry_invoke_function
    at eel-preferences.c line 629
  • #7 IA__g_list_foreach
  • #8 preferences_something_changed_notice
    at eel-preferences.c line 644
  • #9 notify_listeners_callback
    at gconf-client.c line 2385
  • #10 gconf_listeners_notify
    at gconf-listeners.c line 590
  • #11 notify_one_entry
    at gconf-client.c line 2410
  • #12 notify_idle_callback
    at gconf-client.c line 2450
  • #13 g_idle_dispatch
    at /build/buildd/glib2.0-2.18.0/glib/gmain.c line 4232
  • #14 IA__g_main_context_dispatch
    at /build/buildd/glib2.0-2.18.0/glib/gmain.c line 2142
  • #15 g_main_context_iterate
    at /build/buildd/glib2.0-2.18.0/glib/gmain.c line 2775
  • #16 IA__g_main_loop_run
    at /build/buildd/glib2.0-2.18.0/glib/gmain.c line 2983
  • #17 IA__gtk_main
    at /build/buildd/gtk+2.0-2.14.1/gtk/gtkmain.c line 1172
  • #18 main
    at nautilus-main.c line 596

Comment 1 Pedro Villavicencio 2009-04-01 13:35:34 UTC
We also have a similar report with in Ubuntu with nautilus 2.26.0 here https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/352253
Comment 2 Rohini 2009-04-20 09:21:09 UTC
Created attachment 132949 [details] [review]
patch to fix this bug
Comment 3 A. Walton 2009-05-26 15:12:59 UTC
*** Bug 583688 has been marked as a duplicate of this bug. ***
Comment 4 Akhil Laddha 2011-03-29 08:18:37 UTC
*** Bug 646025 has been marked as a duplicate of this bug. ***
Comment 5 Akhil Laddha 2011-03-29 08:19:25 UTC
last dupe in 2.30.x
Comment 6 Cosimo Cecchi 2011-03-29 19:55:06 UTC
Created attachment 184628 [details] [review]
pathbar: keep a ref to the GFile while updating the path

When desktop-is-home-dir changes, we force a re-layout of all the
buttons, which in turn unrefs the passed-in GFile, as the ref would
belong to an old button. Fix this by assuming a ref while calling
nautilus_path_bar_update_path().
Comment 7 Cosimo Cecchi 2011-03-29 20:44:29 UTC
Pushed to master after r-t approval.

Attachment 184628 [details] pushed as cf21e9a - pathbar: keep a ref to the GFile while updating the path