pathbar: keep a ref to the GFile while updating the path

When desktop-is-home-dir changes, we force a re-layout of all the
buttons, which in turn unrefs the passed-in GFile, as the ref would
belong to an old button. Fix this by assuming a ref while calling
nautilus_path_bar_update_path().

https://bugzilla.gnome.org/show_bug.cgi?id=551543